@@ -2,51 +2,62 @@ package ru.animalcare.service;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-import ru.animalcare.domain.TypeOfAnimal;
-import ru.animalcare.repository.TypeRepository;
+import ru.animalcare.domain.AnimalType;
+import ru.animalcare.dto.AnimalTypeDto;
+import ru.animalcare.repository.AnimalTypeRepository;
 
 import javax.persistence.EntityNotFoundException;
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.StreamSupport;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-public class TypeService {
-    private final TypeRepository typeRepository;
+public class AnimalTypeService {
+    private final AnimalTypeRepository animalTypeRepository;
 
-    public List<TypeOfAnimal> findAll() {
-        return StreamSupport.stream(typeRepository.findAll().spliterator(), true).toList();
+    public List<AnimalTypeDto> findAllAnimalTypes() {
+        return animalTypeRepository.findAll()
+                .stream()
+                .map(AnimalTypeDto::new)
+                .collect(Collectors.toList());
+
     }
 
-    public TypeOfAnimal findById(long id) {
+    public AnimalType findById(Long id) {
         try {
-            return typeRepository.findById(id).orElseThrow();
+            return animalTypeRepository.findById(id).orElseThrow();
         } catch (NoSuchElementException e) {
             throw new EntityNotFoundException("type animal no found by id: " + id);
         }
     }
 
+    public Optional<AnimalType> findTypeAnimalByName(String name) {
+        return animalTypeRepository.findByName(name);
+    }
+
     public boolean deleteById(Long id) {
         try {
-            typeRepository.deleteById(id);
+            animalTypeRepository.deleteById(id);
             return true;
         } catch (NoSuchElementException e) {
             throw new EntityNotFoundException("type animal no found by id: " + id);
         }
     }
 
-    public void saveOrUpdate(TypeOfAnimal typeOfAnimal) {
+    public void saveOrUpdate(AnimalType typeOfAnimal) {
 
         try {
-            typeRepository.save(typeOfAnimal);
+            animalTypeRepository.save(typeOfAnimal);
         } catch (NoSuchElementException e) {
             throw new EntityNotFoundException("tape animal no found by id: " + typeOfAnimal.getId());
         }
     }
+
     // удалить
     public boolean saveOrUpdate(Long typeId) {
-        TypeOfAnimal typeOfAnimal = findById(typeId);
+        AnimalType typeOfAnimal = findById(typeId);
         if (typeOfAnimal == null) {
             return false;
         }
